@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST pcalc-1.1.tar.bz2 95549 RMD160 4d3a22160d6fd3ae16149c19034223c8ee2088cf SHA1 96423dbffa0d8d11ceea84211fc550c596e82bf1 SHA256 724d5f5d837e9e47e8d604dd2ae325a9bd8b8107f3ef792c3ead180e04b31782
 DIST pcalc-1.2.tar.bz2 95921 RMD160 11062a3f85ea96f5395d67733c18d5f663948ecb SHA1 627929559d74d233728c2164b6e472a3781c59bb SHA256 ae7548463492c931c24b89143a2c3301f0c0a035a97907bf6d30fa5feffbc5f0
 DIST pcalc-1.3.tar.lzma 88669 RMD160 be65a822e270d2e73595457c2dcfe1bdf9a10b9b SHA1 9ef2fccb96b55d7116953ccd1366e6ace5f877f8 SHA256 3016d257062094292269b9637b21ae5cd34dd8efd2844ba802d12f1a4dd91810
-EBUILD pcalc-1.1.ebuild 610 RMD160 fb8fe535da99cc9dad5fbab3fbceeaeef25bbf95 SHA1 be0b8a84a2a83bc90a3523c04034cd0b18801690 SHA256 586da028c851ea100b0250316e01fa8f4ad070e9716e050987d37323b903fbd6
+DIST pcalc-2.tar.lzma 92758 RMD160 0e77885fe3296a59a8db55c2cd01eca19de87268 SHA1 0400459ecb985d2a638179f8ac2c4f35f9ca3a0e SHA256 be93062e8a15029ea50e4f9f9d0fd4fdbab82c927b7b93afa6f7fa398081c78f
 EBUILD pcalc-1.2.ebuild 575 RMD160 ebfc3cb10d8ff2d3573d0c6fa0a10988c0710960 SHA1 8d19a6907df0d2fc1cedc10b09ae2304fb10edb5 SHA256 4484ae50061824232d8317f722aca0c4b610126efcb1f84da635067573d25e9a
-EBUILD pcalc-1.3.ebuild 649 RMD160 8079db1a2af783273a25663e2f2ec91966d02856 SHA1 b5835e5ea1bcc52dff49cdeaea6be277a43cbf88 SHA256 faab6168bcb8162303fceddc672ba5be04222e65027c175b85d5b96f8e3b7f44
-MISC ChangeLog 2695 RMD160 cf9449fa6071b04080197e2989634d67046be898 SHA1 1b44504b90c449c9d05e5b41eb323b004584566b SHA256 8331cb34ebf953b23442c35166fd724d79d4121b55ec170368e85476ec64abd1
+EBUILD pcalc-1.3.ebuild 638 RMD160 af7e9247a256c0eec18c1dca76182eeea80c934e SHA1 4a5ab921b82d6f7968d0a6afb64adbd555159118 SHA256 c4f00f6c0f7e036df67abae53f83ead25d60d758499c562ddc2637b0ab8d43ae
+EBUILD pcalc-2.ebuild 648 RMD160 f8f6a74d3c54e7546c464ac09b10d061f1c419cc SHA1 c5a1dbb9006bb321f037b78dde2ebec647dc8fec SHA256 89471ce8ad1746d6a66d96e84413b06ebe370e951c9af9744182d2d823f1b818
+MISC ChangeLog 2897 RMD160 92591db33c616a03f2f01eb8b8eacc7143864672 SHA1 474c84cb031d901aecbaf379498a4da5605e0188 SHA256 94679c1811f821c583ab64e09fbba48a118d6912b5cec2366371fa33957f8447
 MISC metadata.xml 217 RMD160 e59c012ba8ec27b36439e65a1b5bbf0ff095353e SHA1 b036cf281dafc05a23dd9e447afa2b2c97d38d4d SHA256 0ae4a6bf75b6b017febdd961c518071b702eaddde696b88720d0d40ba569255b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAkkW0S0ACgkQ67wieSYcaxcKiwCfSS6rMMIXat57ZgHdRax4wyHG
-wz0AnR7XALb3RuWETLUIoX6Ouf9F1YJN
-=5gET
+iEYEARECAAYFAksknXwACgkQlPl3HsVfCDqVCQCeJnGOulliEEfVAqWU2fmFMCAT
+RwcAnR5+8ivqAYOtq+FW4+bWJuKh+zGE
+=nsjg
 -----END PGP SIGNATURE-----
