@@ -1,0 +1,24 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sci-calculators/pcalc/pcalc-2.ebuild,v 1.1 2009/12/13 07:52:26 vapier Exp $
+
+inherit toolchain-funcs
+
+DESCRIPTION="the programmers calculator"
+HOMEPAGE="http://pcalc.sourceforge.net/"
+SRC_URI="mirror://sourceforge/pcalc/${P}.tar.lzma"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+IUSE=""
+
+src_compile() {
+	tc-export CC
+	emake pcalc || die
+}
+
+src_install() {
+	emake install DESTDIR="${D}" || die
+	dodoc AUTHORS ChangeLog EXAMPLE README
+}
