@@ -1,6 +1,11 @@
 # ChangeLog for sci-calculators/pcalc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-calculators/pcalc/ChangeLog,v 1.22 2009/12/13 07:52:02 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-calculators/pcalc/ChangeLog,v 1.23 2009/12/13 07:52:26 vapier Exp $
+
+*pcalc-2 (13 Dec 2009)
+
+  13 Dec 2009; Mike Frysinger <vapier@gentoo.org> +pcalc-2.ebuild:
+  Version bump.
 
   13 Dec 2009; Mike Frysinger <vapier@gentoo.org> pcalc-1.3.ebuild:
   Stabilize for people.
